# fast-llms-txt

./: LICENSE  README.md  pyproject.toml
fast_llms_txt/: __init__.py  generator.py  router.py
scripts/: release.sh
tests/: conftest.py  test_generator.py  test_router.py
tests/fixtures/: __init__.py  sample_app.py
tests/integ/: __init__.py  test_sample_app.py
tests/unit/: __init__.py
