[project]
name = "fast-llms-txt"
version = "0.1.0"
description = "Generate llms.txt markdown from FastAPI OpenAPI schema for AI agents"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = ["fastapi", "openapi", "llms", "ai", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
]
dependencies = [
    "fastapi>=0.128.0",
]

[project.urls]
Homepage = "https://github.com/samaltman/fast-llms-txt"
Repository = "https://github.com/samaltman/fast-llms-txt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
